...
    <string name="activity_blocked">Blocked %1$s</string>
    <string name="activity_blocked_plain">Blocked</string>
    <string name="activity_added">Added</string>
    <string name="activity_removed">Stopped following</string>
    <string name="activity_check_failed">Check failed</string>
    <string name="activity_steps_show">Show steps</string>
    <string name="activity_steps_hide">Hide steps</string>

    <!-- First run -->
    <string name="first_well_known">Well known apps</string>
</resources>

